// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeBandwidthPoints > computes correct bandwidth deltas between two real events 1`] = `
[
  {
    "filterId": "0",
    "inband": {
      "time": "2.2s",
      "timestamp": 2238647,
      "value": 466543.17065031244,
    },
    "outband": {
      "time": "2.2s",
      "timestamp": 2238647,
      "value": 466543.17065031244,
    },
  },
  {
    "filterId": "1",
    "inband": {
      "time": "2.2s",
      "timestamp": 2238647,
      "value": 42818346.95186653,
    },
    "outband": {
      "time": "2.2s",
      "timestamp": 2238647,
      "value": 0,
    },
  },
  {
    "filterId": "4",
    "inband": {
      "time": "2.2s",
      "timestamp": 2238647,
      "value": 0,
    },
    "outband": {
      "time": "2.2s",
      "timestamp": 2238647,
      "value": 471648.87165007065,
    },
  },
]
`;

exports[`computeBandwidthPoints > returns zero values on first event (no previous reference) 1`] = `
[
  {
    "filterId": "0",
    "inband": {
      "time": "1.2s",
      "timestamp": 1237805,
      "value": 0,
    },
    "outband": {
      "time": "1.2s",
      "timestamp": 1237805,
      "value": 0,
    },
  },
  {
    "filterId": "1",
    "inband": {
      "time": "1.2s",
      "timestamp": 1237805,
      "value": 0,
    },
    "outband": {
      "time": "1.2s",
      "timestamp": 1237805,
      "value": 0,
    },
  },
  {
    "filterId": "4",
    "inband": {
      "time": "1.2s",
      "timestamp": 1237805,
      "value": 0,
    },
    "outband": {
      "time": "1.2s",
      "timestamp": 1237805,
      "value": 0,
    },
  },
]
`;

exports[`computeBandwidthPoints > updates prevBandwidth references after each call 1`] = `
{
  "bytes_done": 727528,
  "bytes_sent": 727528,
  "ts_us": 1237805,
}
`;
